overflow is fixed

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,3 +1,8 @@
+.header_wrapper{
+    overflow: hidden;
+    position: relative;
+}
+
 .header_image{
     height: 88vh;
     width: 100%;
@@ -8,13 +13,14 @@
 
 .site_title{
     position: absolute;
+    overflow: hidden;
     top: 70%;
     left: 5%;
     width: 100%;
     color: white;
     margin-bottom: 20px;
     transform: none;
-    z-index: 1;
+    /* z-index: 1; */
     line-height: 20px;
 }
 
